2004-12-07 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * vtk/vtkGdcmWriter.[h|cxx] : add a first version of vtkGdcmWriter
   * src/gdcmValEntry.cxx : bug fix when setting the value. Problems of odd
     length
   * src/gdcmHeader.cxx : Remove a useless call to Util::DicomString
   * Add vtkGdcmWriter example and test

2004-12-07 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * Test/TestUtil.cxx : reformat the source code
   * vtk/vtkGdcmReader.cxx : remove and change prints
   * src/gdcmValEntry.[cxx|h] : now set the length of the value when calling
     SetValue
   * src/gdcmBinEntry.[cxx|h] : SetValue method don't set the length
   * src/*.cxx : remove all useless call to SetLength of a ValEntry object

2004-12-07 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * src/gdcmPixelWriteConvert.[h|cxx] : ficnished this class
   * src/gdcmFile.cxx : finished the correctly use of PixelWriteConvert

2004-12-06 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * src/gdcmDocument.cxx : bug fix when opening the file. All read is followed
     by an eof to prevent all bad read of the file... and in this case, the
     file isn't readable. 

2004-12-06 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * Example/Volume2Dicom.cxx : comment unused variables
   * Test/PrintDicomDir.cxx : comment unused variables
   * Test/BuildUpDicomDir.cxx : remove dbg.Verbose. Remove the FIXME.
   * src/SQItem.[h|cxx] : remove the PtagHT variable. Remove the AddDocEntry
     method that is redondant with AddEntry.
   * src/gdcmDocEntrySet.h : add pure virtual methods common to ElementSet and
     SQItem

2004-12-04 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * Bug fix due my last commit (compilation under Windows).
   * Example/Volume2Dicom : bug fix in the file and reformatting source code
   * src/gdcmFile.h : bug fix. Variable type and variable name had same name

2004-12-03 Mathieu Malaterre  <Mathieu.Malaterre@creatis.insa-lyon.fr>